crates/djls-extraction/tests/snapshots/corpus__extraction_snapshots@packages__Django__6.0.2__django__templatetags__l10n.py.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/Django/6.0.2/django/templatetags/l10n.py
---
tag_rules:
  "django.templatetags.l10n::localize":
    arg_constraints:
      - Max: 2
    required_keywords: []
    choice_at_constraints:
      - position:
          Forward: 1
        values:
          - "on"
          - "off"
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
filter_arities:
  "django.templatetags.l10n::localize":
    expects_arg: false
    arg_optional: false
  "django.templatetags.l10n::unlocalize":
    expects_arg: false
    arg_optional: false
block_specs:
  "django.templatetags.l10n::localize":
    end_tag: endlocalize
    intermediates: []
    opaque: false
